--- a/src/components/MovieList/index.scss
+++ b/src/components/MovieList/index.scss
@@ -1,7 +1,7 @@
-.movie-card {
-    color: #fff;
-}
-
-.description {
-    color: yellow;
+.movie-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 16px;
+  list-style: none;
+  width: 100%;
 }
