--- a/src/components/MovieCard/index.scss
+++ b/src/components/MovieCard/index.scss
@@ -4,13 +4,13 @@
   border-radius: 8px;
   overflow: hidden;
   position: relative;
-  
+
   .movie-poster img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     opacity: 1;
-    transition: opacity .6s;
+    transition: opacity 0.6s;
   }
 
   .movie-infor {
@@ -21,21 +21,34 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 10px;
 
     .movie-title {
       color: #f1f5f9;
       font-size: 12px;
+      margin-bottom: 6px;
     }
-    
+
     .hidden-content {
-      
       color: #f1f5f9;
       font-size: 12px;
       margin-top: 8px;
       height: 0px;
       opacity: 0;
+      transition: all 0.6s;
+    }
+
+    .btn-default {
+      background-color: #6046ff;
+      padding: 6px 8px;
+      border-radius: 4px;
+      margin-top: 10px;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+
     }
   }
 
@@ -50,6 +63,13 @@
       opacity: 1;
       height: 100px;
     }
-  }
 
+    .movie-infor:has(.description) .hidden-content {
+      height: 100px;
+    }
+
+    .movie-infor:not(:has(.description)).hidden-content {
+      height: 50px;
+    }
+  }
 }
